src/Parser/y.output
   0  $accept : programa $end

   1  programa : ID '{' bloque '}'
   2           | error_programa

   3  error_programa : '{' bloque '}'
   4                 | ID error bloque '}'
   5                 | ID '{' bloque

   6  bloque : bloque_declarativo bloque_ejecutable
   7         | bloque_ejecutable bloque_declarativo
   8         | bloque_declarativo
   9         | bloque_ejecutable

  10  bloque_declarativo : declaracion
  11                     | bloque_declarativo declaracion

  12  bloque_ejecutable : ejecucion
  13                    | bloque_ejecutable ejecucion

  14  declaracion : tipo lista_de_variables ';'
  15              | funcion
  16              | error_declaracion

  17  error_declaracion : tipo lista_de_variables error
  18                    | lista_de_variables ';'
  19                    | tipo ';'

  20  lista_de_variables : ID
  21                     | lista_de_variables ',' ID
  22                     | error_lista_de_variables

  23  error_lista_de_variables : lista_de_variables ID
  24                           | ',' ID
  25                           | lista_de_variables ',' error

  26  funcion : declaracion_fun '{' bloque '}'
  27          | error_funcion

  28  error_funcion : declaracion_fun bloque '}'
  29                | declaracion_fun '{' bloque error
  30                | declaracion_fun '{' '}'

  31  declaracion_fun : FUN ID lista_de_parametros ':' tipo
  32                  | error_declaracion_fun

  33  error_declaracion_fun : ID lista_de_parametros ':' tipo
  34                        | FUN lista_de_parametros ':' tipo
  35                        | FUN ID ':' tipo
  36                        | FUN ID lista_de_parametros tipo
  37                        | FUN ID lista_de_parametros ':' error

  38  lista_de_parametros : '(' ')'
  39                      | '(' parametro ')'
  40                      | '(' parametro ',' parametro ')'
  41                      | error_lista_de_parametros

  42  error_lista_de_parametros : parametro ')'
  43                            | '(' parametro
  44                            | '(' parametro ',' parametro ',' parametro ')'

  45  parametro : tipo ID
  46            | error_parametro

  47  error_parametro : tipo
  48                  | error ID

  49  tipo : I32
  50       | F32

  51  ejecucion : asignacion ';'
  52            | DISCARD invocacion ';'
  53            | seleccion ';'
  54            | retorno ';'
  55            | control ';'
  56            | salida ';'
  57            | BREAK ';'
  58            | CONTINUE ';'
  59            | error_ejecucion

  60  error_ejecucion : asignacion error
  61                  | seleccion error
  62                  | control error
  63                  | salida error
  64                  | BREAK error
  65                  | retorno error
  66                  | CONTINUE error
  67                  | DISCARD ';'
  68                  | DISCARD invocacion error
  69                  | invocacion ';'

  70  asignacion : ID ASIGNACION expresion_aritmetica
  71             | error_asignacion

  72  error_asignacion : ID error expresion_aritmetica
  73                   | ID ASIGNACION error
  74                   | ASIGNACION expresion_aritmetica

  75  retorno : RETURN expresion_aritmetica
  76          | error_retorno

  77  error_retorno : RETURN

  78  expresion_aritmetica : termino
  79                       | expresion_aritmetica '+' termino
  80                       | expresion_aritmetica '-' termino
  81                       | error_expresion_aritmetica

  82  error_expresion_aritmetica : expresion_aritmetica '+' error
  83                             | expresion_aritmetica '-' error

  84  termino : termino '*' factor
  85          | termino '/' factor
  86          | factor
  87          | error_termino

  88  error_termino : termino '*' error
  89                | termino '/' error
  90                | '*' factor
  91                | '/' factor

  92  factor : ID
  93         | CTE_FLOTANTE
  94         | CTE_INT
  95         | invocacion
  96         | '-' factor

  97  invocacion : ID '(' parametros_reales ')'
  98             | ID '(' ')'
  99             | error_invocacion

 100  error_invocacion : ID '(' parametros_reales error
 101                   | ID '(' error

 102  parametros_reales : factor_invocacion
 103                    | factor_invocacion ',' factor_invocacion
 104                    | error_parametros_reales

 105  error_parametros_reales : factor_invocacion factor_invocacion

 106  factor_invocacion : ID
 107                    | CTE_FLOTANTE
 108                    | CTE_INT
 109                    | '-' factor_invocacion

 110  seleccion : IF '(' condicion ')' THEN bloque_if_for ENDIF
 111            | IF '(' condicion ')' THEN bloque_if_for ELSE bloque_if_for ENDIF
 112            | error_seleccion

 113  error_seleccion : '(' condicion ')' THEN bloque_if_for ENDIF
 114                  | IF condicion ')' THEN bloque_if_for ENDIF
 115                  | IF '(' ')' THEN bloque_if_for ENDIF
 116                  | IF '(' condicion THEN bloque_if_for ENDIF
 117                  | IF '(' condicion ')' bloque_if_for ENDIF
 118                  | IF '(' condicion ')' THEN ENDIF
 119                  | IF '(' condicion ')' THEN bloque_if_for error

 120  bloque_if_for : ejecucion
 121                | '{' bloque_ejecutable '}'
 122                | error_bloque_if

 123  error_bloque_if : bloque_ejecutable '}'
 124                  | '{' bloque_ejecutable

 125  condicion : expresion_aritmetica comparador expresion_aritmetica

 126  comparador : '<'
 127             | '>'
 128             | '='
 129             | MAYOR_IGUAL
 130             | MENOR_IGUAL
 131             | DISTINTO

 132  control : FOR '(' asignacion_for ';' condicion_for ';' '+' CTE_INT ')' bloque_if_for
 133          | FOR '(' asignacion_for ';' condicion_for ';' '-' CTE_INT ')' bloque_if_for
 134          | error_control

 135  error_control : FOR '(' asignacion_for ';' condicion_for ';' CTE_INT ')' bloque_if_for
 136                | FOR '(' asignacion_for ';' condicion_for ';' '-' ')' bloque_if_for
 137                | FOR '(' asignacion_for ';' condicion_for ';' '+' ')' bloque_if_for

 138  asignacion_for : ID ASIGNACION CTE_INT
 139                 | error_asignacion_for

 140  error_asignacion_for : ASIGNACION CTE_INT
 141                       | ID CTE_INT
 142                       | ID ASIGNACION

 143  condicion_for : ID comparador expresion_aritmetica
 144                | error_condicion_for

 145  error_condicion_for : comparador expresion_aritmetica
 146                      | ID expresion_aritmetica
 147                      | ID comparador

 148  salida : OUT '(' CADENA ')'
 149         | error_salida

 150  error_salida : OUT CADENA ')'
 151               | OUT '(' ')'
 152               | OUT '(' CADENA

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	'{'  shift 2
	.  error

	programa  goto 3
	error_programa  goto 4


state 1
	programa : ID . '{' bloque '}'  (1)
	error_programa : ID . error bloque '}'  (4)
	error_programa : ID . '{' bloque  (5)

	error  shift 5
	'{'  shift 6
	.  error


state 2
	error_programa : '{' . bloque '}'  (3)

	ID  shift 7
	ASIGNACION  shift 8
	IF  shift 9
	OUT  shift 10
	FUN  shift 11
	RETURN  shift 12
	BREAK  shift 13
	DISCARD  shift 14
	FOR  shift 15
	CONTINUE  shift 16
	F32  shift 17
	I32  shift 18
	','  shift 19
	'('  shift 20
	.  error

	bloque  goto 21
	bloque_declarativo  goto 22
	bloque_ejecutable  goto 23
	declaracion  goto 24
	ejecucion  goto 25
	tipo  goto 26
	lista_de_variables  goto 27
	funcion  goto 28
	error_declaracion  goto 29
	error_lista_de_variables  goto 30
	declaracion_fun  goto 31
	error_funcion  goto 32
	error_declaracion_fun  goto 33
	asignacion  goto 34
	invocacion  goto 35
	seleccion  goto 36
	retorno  goto 37
	control  goto 38
	salida  goto 39
	error_ejecucion  goto 40
	error_asignacion  goto 41
	error_retorno  goto 42
	error_invocacion  goto 43
	error_seleccion  goto 44
	error_control  goto 45
	error_salida  goto 46


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : error_programa .  (2)

	.  reduce 2


state 5
	error_programa : ID error . bloque '}'  (4)

	ID  shift 7
	ASIGNACION  shift 8
	IF  shift 9
	OUT  shift 10
	FUN  shift 11
	RETURN  shift 12
	BREAK  shift 13
	DISCARD  shift 14
	FOR  shift 15
	CONTINUE  shift 16
	F32  shift 17
	I32  shift 18
	','  shift 19
	'('  shift 20
	.  error

	bloque  goto 47
	bloque_declarativo  goto 22
	bloque_ejecutable  goto 23
	declaracion  goto 24
	ejecucion  goto 25
	tipo  goto 26
	lista_de_variables  goto 27
	funcion  goto 28
	error_declaracion  goto 29
	error_lista_de_variables  goto 30
	declaracion_fun  goto 31
	error_funcion  goto 32
	error_declaracion_fun  goto 33
	asignacion  goto 34
	invocacion  goto 35
	seleccion  goto 36
	retorno  goto 37
	control  goto 38
	salida  goto 39
	error_ejecucion  goto 40
	error_asignacion  goto 41
	error_retorno  goto 42
	error_invocacion  goto 43
	error_seleccion  goto 44
	error_control  goto 45
	error_salida  goto 46


state 6
	programa : ID '{' . bloque '}'  (1)
	error_programa : ID '{' . bloque  (5)

	ID  shift 7
	ASIGNACION  shift 8
	IF  shift 9
	OUT  shift 10
	FUN  shift 11
	RETURN  shift 12
	BREAK  shift 13
	DISCARD  shift 14
	FOR  shift 15
	CONTINUE  shift 16
	F32  shift 17
	I32  shift 18
	','  shift 19
	'('  shift 20
	.  error

	bloque  goto 48
	bloque_declarativo  goto 22
	bloque_ejecutable  goto 23
	declaracion  goto 24
	ejecucion  goto 25
	tipo  goto 26
	lista_de_variables  goto 27
	funcion  goto 28
	error_declaracion  goto 29
	error_lista_de_variables  goto 30
	declaracion_fun  goto 31
	error_funcion  goto 32
	error_declaracion_fun  goto 33
	asignacion  goto 34
	invocacion  goto 35
	seleccion  goto 36
	retorno  goto 37
	control  goto 38
	salida  goto 39
	error_ejecucion  goto 40
	error_asignacion  goto 41
	error_retorno  goto 42
	error_invocacion  goto 43
	error_seleccion  goto 44
	error_control  goto 45
	error_salida  goto 46


state 7
	lista_de_variables : ID .  (20)
	error_declaracion_fun : ID . lista_de_parametros ':' tipo  (33)
	asignacion : ID . ASIGNACION expresion_aritmetica  (70)
	error_asignacion : ID . error expresion_aritmetica  (72)
	error_asignacion : ID . ASIGNACION error  (73)
	invocacion : ID . '(' parametros_reales ')'  (97)
	invocacion : ID . '(' ')'  (98)
	error_invocacion : ID . '(' parametros_reales error  (100)
	error_invocacion : ID . '(' error  (101)

	error  shift 49
	ASIGNACION  shift 50
	F32  shift 17
	I32  shift 18
	'('  shift 51
	ID  reduce 20
	';'  reduce 20
	','  reduce 20

	tipo  goto 52
	lista_de_parametros  goto 53
	parametro  goto 54
	error_lista_de_parametros  goto 55
	error_parametro  goto 56


state 8
	error_asignacion : ASIGNACION . expresion_aritmetica  (74)

	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	.  error

	invocacion  goto 63
	expresion_aritmetica  goto 64
	termino  goto 65
	error_expresion_aritmetica  goto 66
	factor  goto 67
	error_termino  goto 68
	error_invocacion  goto 43


state 9
	seleccion : IF . '(' condicion ')' THEN bloque_if_for ENDIF  (110)
	seleccion : IF . '(' condicion ')' THEN bloque_if_for ELSE bloque_if_for ENDIF  (111)
	error_seleccion : IF . condicion ')' THEN bloque_if_for ENDIF  (114)
	error_seleccion : IF . '(' ')' THEN bloque_if_for ENDIF  (115)
	error_seleccion : IF . '(' condicion THEN bloque_if_for ENDIF  (116)
	error_seleccion : IF . '(' condicion ')' bloque_if_for ENDIF  (117)
	error_seleccion : IF . '(' condicion ')' THEN ENDIF  (118)
	error_seleccion : IF . '(' condicion ')' THEN bloque_if_for error  (119)

	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'('  shift 69
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	.  error

	invocacion  goto 63
	expresion_aritmetica  goto 70
	termino  goto 65
	error_expresion_aritmetica  goto 66
	factor  goto 67
	error_termino  goto 68
	error_invocacion  goto 43
	condicion  goto 71


state 10
	salida : OUT . '(' CADENA ')'  (148)
	error_salida : OUT . CADENA ')'  (150)
	error_salida : OUT . '(' ')'  (151)
	error_salida : OUT . '(' CADENA  (152)

	CADENA  shift 72
	'('  shift 73
	.  error


state 11
	declaracion_fun : FUN . ID lista_de_parametros ':' tipo  (31)
	error_declaracion_fun : FUN . lista_de_parametros ':' tipo  (34)
	error_declaracion_fun : FUN . ID ':' tipo  (35)
	error_declaracion_fun : FUN . ID lista_de_parametros tipo  (36)
	error_declaracion_fun : FUN . ID lista_de_parametros ':' error  (37)

	error  shift 74
	ID  shift 75
	F32  shift 17
	I32  shift 18
	'('  shift 76
	.  error

	tipo  goto 52
	lista_de_parametros  goto 77
	parametro  goto 54
	error_lista_de_parametros  goto 55
	error_parametro  goto 56


state 12
	retorno : RETURN . expresion_aritmetica  (75)
	error_retorno : RETURN .  (77)

	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	error  reduce 77
	';'  reduce 77

	invocacion  goto 63
	expresion_aritmetica  goto 78
	termino  goto 65
	error_expresion_aritmetica  goto 66
	factor  goto 67
	error_termino  goto 68
	error_invocacion  goto 43


state 13
	ejecucion : BREAK . ';'  (57)
	error_ejecucion : BREAK . error  (64)

	error  shift 79
	';'  shift 80
	.  error


state 14
	ejecucion : DISCARD . invocacion ';'  (52)
	error_ejecucion : DISCARD . ';'  (67)
	error_ejecucion : DISCARD . invocacion error  (68)

	ID  shift 81
	';'  shift 82
	.  error

	invocacion  goto 83
	error_invocacion  goto 43


state 15
	control : FOR . '(' asignacion_for ';' condicion_for ';' '+' CTE_INT ')' bloque_if_for  (132)
	control : FOR . '(' asignacion_for ';' condicion_for ';' '-' CTE_INT ')' bloque_if_for  (133)
	error_control : FOR . '(' asignacion_for ';' condicion_for ';' CTE_INT ')' bloque_if_for  (135)
	error_control : FOR . '(' asignacion_for ';' condicion_for ';' '-' ')' bloque_if_for  (136)
	error_control : FOR . '(' asignacion_for ';' condicion_for ';' '+' ')' bloque_if_for  (137)

	'('  shift 84
	.  error


state 16
	ejecucion : CONTINUE . ';'  (58)
	error_ejecucion : CONTINUE . error  (66)

	error  shift 85
	';'  shift 86
	.  error


state 17
	tipo : F32 .  (50)

	.  reduce 50


state 18
	tipo : I32 .  (49)

	.  reduce 49


state 19
	error_lista_de_variables : ',' . ID  (24)

	ID  shift 87
	.  error


state 20
	error_seleccion : '(' . condicion ')' THEN bloque_if_for ENDIF  (113)

	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	.  error

	invocacion  goto 63
	expresion_aritmetica  goto 70
	termino  goto 65
	error_expresion_aritmetica  goto 66
	factor  goto 67
	error_termino  goto 68
	error_invocacion  goto 43
	condicion  goto 88


state 21
	error_programa : '{' bloque . '}'  (3)

	'}'  shift 89
	.  error


state 22
	bloque : bloque_declarativo . bloque_ejecutable  (6)
	bloque : bloque_declarativo .  (8)
	bloque_declarativo : bloque_declarativo . declaracion  (11)

	ID  shift 7
	ASIGNACION  shift 8
	IF  shift 9
	OUT  shift 10
	FUN  shift 11
	RETURN  shift 12
	BREAK  shift 13
	DISCARD  shift 14
	FOR  shift 15
	CONTINUE  shift 16
	F32  shift 17
	I32  shift 18
	','  shift 19
	'('  shift 20
	$end  reduce 8
	error  reduce 8
	'}'  reduce 8

	bloque_ejecutable  goto 90
	declaracion  goto 91
	ejecucion  goto 25
	tipo  goto 26
	lista_de_variables  goto 27
	funcion  goto 28
	error_declaracion  goto 29
	error_lista_de_variables  goto 30
	declaracion_fun  goto 31
	error_funcion  goto 32
	error_declaracion_fun  goto 33
	asignacion  goto 34
	invocacion  goto 35
	seleccion  goto 36
	retorno  goto 37
	control  goto 38
	salida  goto 39
	error_ejecucion  goto 40
	error_asignacion  goto 41
	error_retorno  goto 42
	error_invocacion  goto 43
	error_seleccion  goto 44
	error_control  goto 45
	error_salida  goto 46


state 23
	bloque : bloque_ejecutable . bloque_declarativo  (7)
	bloque : bloque_ejecutable .  (9)
	bloque_ejecutable : bloque_ejecutable . ejecucion  (13)

	ID  shift 7
	ASIGNACION  shift 8
	IF  shift 9
	OUT  shift 10
	FUN  shift 11
	RETURN  shift 12
	BREAK  shift 13
	DISCARD  shift 14
	FOR  shift 15
	CONTINUE  shift 16
	F32  shift 17
	I32  shift 18
	','  shift 19
	'('  shift 20
	$end  reduce 9
	error  reduce 9
	'}'  reduce 9

	bloque_declarativo  goto 92
	declaracion  goto 24
	ejecucion  goto 93
	tipo  goto 26
	lista_de_variables  goto 27
	funcion  goto 28
	error_declaracion  goto 29
	error_lista_de_variables  goto 30
	declaracion_fun  goto 31
	error_funcion  goto 32
	error_declaracion_fun  goto 33
	asignacion  goto 34
	invocacion  goto 35
	seleccion  goto 36
	retorno  goto 37
	control  goto 38
	salida  goto 39
	error_ejecucion  goto 40
	error_asignacion  goto 41
	error_retorno  goto 42
	error_invocacion  goto 43
	error_seleccion  goto 44
	error_control  goto 45
	error_salida  goto 46


state 24
	bloque_declarativo : declaracion .  (10)

	.  reduce 10


state 25
	bloque_ejecutable : ejecucion .  (12)

	.  reduce 12


state 26
	declaracion : tipo . lista_de_variables ';'  (14)
	error_declaracion : tipo . lista_de_variables error  (17)
	error_declaracion : tipo . ';'  (19)

	ID  shift 94
	';'  shift 95
	','  shift 19
	.  error

	lista_de_variables  goto 96
	error_lista_de_variables  goto 30


state 27
	error_declaracion : lista_de_variables . ';'  (18)
	lista_de_variables : lista_de_variables . ',' ID  (21)
	error_lista_de_variables : lista_de_variables . ID  (23)
	error_lista_de_variables : lista_de_variables . ',' error  (25)

	ID  shift 97
	';'  shift 98
	','  shift 99
	.  error


state 28
	declaracion : funcion .  (15)

	.  reduce 15


state 29
	declaracion : error_declaracion .  (16)

	.  reduce 16


state 30
	lista_de_variables : error_lista_de_variables .  (22)

	.  reduce 22


state 31
	funcion : declaracion_fun . '{' bloque '}'  (26)
	error_funcion : declaracion_fun . bloque '}'  (28)
	error_funcion : declaracion_fun . '{' bloque error  (29)
	error_funcion : declaracion_fun . '{' '}'  (30)

	ID  shift 7
	ASIGNACION  shift 8
	IF  shift 9
	OUT  shift 10
	FUN  shift 11
	RETURN  shift 12
	BREAK  shift 13
	DISCARD  shift 14
	FOR  shift 15
	CONTINUE  shift 16
	F32  shift 17
	I32  shift 18
	'{'  shift 100
	','  shift 19
	'('  shift 20
	.  error

	bloque  goto 101
	bloque_declarativo  goto 22
	bloque_ejecutable  goto 23
	declaracion  goto 24
	ejecucion  goto 25
	tipo  goto 26
	lista_de_variables  goto 27
	funcion  goto 28
	error_declaracion  goto 29
	error_lista_de_variables  goto 30
	declaracion_fun  goto 31
	error_funcion  goto 32
	error_declaracion_fun  goto 33
	asignacion  goto 34
	invocacion  goto 35
	seleccion  goto 36
	retorno  goto 37
	control  goto 38
	salida  goto 39
	error_ejecucion  goto 40
	error_asignacion  goto 41
	error_retorno  goto 42
	error_invocacion  goto 43
	error_seleccion  goto 44
	error_control  goto 45
	error_salida  goto 46


state 32
	funcion : error_funcion .  (27)

	.  reduce 27


state 33
	declaracion_fun : error_declaracion_fun .  (32)

	.  reduce 32


state 34
	ejecucion : asignacion . ';'  (51)
	error_ejecucion : asignacion . error  (60)

	error  shift 102
	';'  shift 103
	.  error


state 35
	error_ejecucion : invocacion . ';'  (69)

	';'  shift 104
	.  error


state 36
	ejecucion : seleccion . ';'  (53)
	error_ejecucion : seleccion . error  (61)

	error  shift 105
	';'  shift 106
	.  error


state 37
	ejecucion : retorno . ';'  (54)
	error_ejecucion : retorno . error  (65)

	error  shift 107
	';'  shift 108
	.  error


state 38
	ejecucion : control . ';'  (55)
	error_ejecucion : control . error  (62)

	error  shift 109
	';'  shift 110
	.  error


state 39
	ejecucion : salida . ';'  (56)
	error_ejecucion : salida . error  (63)

	error  shift 111
	';'  shift 112
	.  error


state 40
	ejecucion : error_ejecucion .  (59)

	.  reduce 59


state 41
	asignacion : error_asignacion .  (71)

	.  reduce 71


state 42
	retorno : error_retorno .  (76)

	.  reduce 76


state 43
	invocacion : error_invocacion .  (99)

	.  reduce 99


state 44
	seleccion : error_seleccion .  (112)

	.  reduce 112


state 45
	control : error_control .  (134)

	.  reduce 134


state 46
	salida : error_salida .  (149)

	.  reduce 149


state 47
	error_programa : ID error bloque . '}'  (4)

	'}'  shift 113
	.  error


state 48
	programa : ID '{' bloque . '}'  (1)
	error_programa : ID '{' bloque .  (5)

	'}'  shift 114
	$end  reduce 5


state 49
	error_parametro : error . ID  (48)
	error_asignacion : ID error . expresion_aritmetica  (72)

	ID  shift 115
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	.  error

	invocacion  goto 63
	expresion_aritmetica  goto 116
	termino  goto 65
	error_expresion_aritmetica  goto 66
	factor  goto 67
	error_termino  goto 68
	error_invocacion  goto 43


state 50
	asignacion : ID ASIGNACION . expresion_aritmetica  (70)
	error_asignacion : ID ASIGNACION . error  (73)

	error  shift 117
	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	.  error

	invocacion  goto 63
	expresion_aritmetica  goto 118
	termino  goto 65
	error_expresion_aritmetica  goto 66
	factor  goto 67
	error_termino  goto 68
	error_invocacion  goto 43


state 51
	lista_de_parametros : '(' . ')'  (38)
	lista_de_parametros : '(' . parametro ')'  (39)
	lista_de_parametros : '(' . parametro ',' parametro ')'  (40)
	error_lista_de_parametros : '(' . parametro  (43)
	error_lista_de_parametros : '(' . parametro ',' parametro ',' parametro ')'  (44)
	invocacion : ID '(' . parametros_reales ')'  (97)
	invocacion : ID '(' . ')'  (98)
	error_invocacion : ID '(' . parametros_reales error  (100)
	error_invocacion : ID '(' . error  (101)

	error  shift 119
	ID  shift 120
	CTE_INT  shift 121
	CTE_FLOTANTE  shift 122
	F32  shift 17
	I32  shift 18
	')'  shift 123
	'-'  shift 124
	.  error

	tipo  goto 52
	parametro  goto 125
	error_parametro  goto 56
	parametros_reales  goto 126
	factor_invocacion  goto 127
	error_parametros_reales  goto 128


state 52
	parametro : tipo . ID  (45)
	error_parametro : tipo .  (47)

	ID  shift 129
	F32  reduce 47
	I32  reduce 47
	','  reduce 47
	':'  reduce 47
	')'  reduce 47


state 53
	error_declaracion_fun : ID lista_de_parametros . ':' tipo  (33)

	':'  shift 130
	.  error


state 54
	error_lista_de_parametros : parametro . ')'  (42)

	')'  shift 131
	.  error


state 55
	lista_de_parametros : error_lista_de_parametros .  (41)

	.  reduce 41


state 56
	parametro : error_parametro .  (46)

	.  reduce 46


state 57
	factor : ID .  (92)
	invocacion : ID . '(' parametros_reales ')'  (97)
	invocacion : ID . '(' ')'  (98)
	error_invocacion : ID . '(' parametros_reales error  (100)
	error_invocacion : ID . '(' error  (101)

	'('  shift 132
	error  reduce 92
	MENOR_IGUAL  reduce 92
	MAYOR_IGUAL  reduce 92
	DISTINTO  reduce 92
	THEN  reduce 92
	';'  reduce 92
	')'  reduce 92
	'+'  reduce 92
	'-'  reduce 92
	'*'  reduce 92
	'/'  reduce 92
	'<'  reduce 92
	'>'  reduce 92
	'='  reduce 92


state 58
	factor : CTE_INT .  (94)

	.  reduce 94


state 59
	factor : CTE_FLOTANTE .  (93)

	.  reduce 93


state 60
	factor : '-' . factor  (96)

	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'-'  shift 60
	.  error

	invocacion  goto 63
	factor  goto 133
	error_invocacion  goto 43


state 61
	error_termino : '*' . factor  (90)

	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'-'  shift 60
	.  error

	invocacion  goto 63
	factor  goto 134
	error_invocacion  goto 43


state 62
	error_termino : '/' . factor  (91)

	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	'-'  shift 60
	.  error

	invocacion  goto 63
	factor  goto 135
	error_invocacion  goto 43


state 63
	factor : invocacion .  (95)

	.  reduce 95


state 64
	error_asignacion : ASIGNACION expresion_aritmetica .  (74)
	expresion_aritmetica : expresion_aritmetica . '+' termino  (79)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (80)
	error_expresion_aritmetica : expresion_aritmetica . '+' error  (82)
	error_expresion_aritmetica : expresion_aritmetica . '-' error  (83)

	'+'  shift 136
	'-'  shift 137
	error  reduce 74
	';'  reduce 74


state 65
	expresion_aritmetica : termino .  (78)
	termino : termino . '*' factor  (84)
	termino : termino . '/' factor  (85)
	error_termino : termino . '*' error  (88)
	error_termino : termino . '/' error  (89)

	'*'  shift 138
	'/'  shift 139
	error  reduce 78
	MENOR_IGUAL  reduce 78
	MAYOR_IGUAL  reduce 78
	DISTINTO  reduce 78
	THEN  reduce 78
	';'  reduce 78
	')'  reduce 78
	'+'  reduce 78
	'-'  reduce 78
	'<'  reduce 78
	'>'  reduce 78
	'='  reduce 78


state 66
	expresion_aritmetica : error_expresion_aritmetica .  (81)

	.  reduce 81


state 67
	termino : factor .  (86)

	.  reduce 86


state 68
	termino : error_termino .  (87)

	.  reduce 87


state 69
	seleccion : IF '(' . condicion ')' THEN bloque_if_for ENDIF  (110)
	seleccion : IF '(' . condicion ')' THEN bloque_if_for ELSE bloque_if_for ENDIF  (111)
	error_seleccion : IF '(' . ')' THEN bloque_if_for ENDIF  (115)
	error_seleccion : IF '(' . condicion THEN bloque_if_for ENDIF  (116)
	error_seleccion : IF '(' . condicion ')' bloque_if_for ENDIF  (117)
	error_seleccion : IF '(' . condicion ')' THEN ENDIF  (118)
	error_seleccion : IF '(' . condicion ')' THEN bloque_if_for error  (119)

	ID  shift 57
	CTE_INT  shift 58
	CTE_FLOTANTE  shift 59
	')'  shift 140
	'-'  shift 60
	'*'  shift 61
	'/'  shift 62
	.  error

	invocacion  goto 63
	expresion_aritmetica  goto 70
	termino  goto 65
	error_expresion_aritmetica  goto 66
	factor  goto 67
	error_termino  goto 68
	error_invocacion  goto 43
	condicion  goto 141


state 70
	expresion_aritmetica : expresion_aritmetica . '+' termino  (79)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (80)
	error_expresion_aritmetica : expresion_aritmetica . '+' error  (82)
	error_expresion_aritmetica : expresion_aritmetica . '-' error  (83)
	condicion : expresion_aritmetica . comparador expresion_aritmetica  (125)

	MENOR_IGUAL  shift 142
	MAYOR_IGUAL  shift 143
	DISTINTO  shift 144
	'+'  shift 136
	'-'  shift 137
	'<'  shift 145
	'>'  shift 146
	'='  shift 147
	.  error

	comparador  goto 148


state 71
	error_seleccion : IF condicion . ')' THEN bloque_if_for ENDIF  (114)

	')'  shift 149
	.  error


state 72
	error_salida : OUT CADENA . ')'  (150)

	')'  shift 150
	.  error


state 73
	salida : OUT '(' . CADENA ')'  (148)
	error_salida : OUT '(' . ')'  (151)
	error_salida : OUT '(' . CADENA  (152)

	CADENA  shift 151
	')'  shift 152
	.  error


state 74
	error_parametro : error . ID  (48)

	ID  shift 153
	.  error


state 75
	declaracion_fun : FUN ID . lista_de_parametros ':' tipo  (31)
	error_declaracion_fun : FUN ID . ':' tipo  (35)
	error_declaracion_fun : FUN ID . lista_de_parametros tipo  (36)
	error_declaracion_fun : FUN ID . lista_de_parametros ':' error  (37)

	error  shift 74
	F32  shift 17
	I32  shift 18
	':'  shift 154
	'('  shift 76
	.  error

	tipo  goto 52
	lista_de_parametros  goto 155
	parametro  goto 54
	error_lista_de_parametros  goto 55
	error_parametro  goto 56


state 76
	lista_de_parametros : '(' . ')'  (38)
	lista_de_parametros : '(' . parametro ')'  (39)
	lista_de_parametros : '(' . parametro ',' parametro ')'  (40)
	error_lista_de_parametros : '(' . parametro  (43)
	error_lista_de_parametros : '(' . parametro ',' parametro ',' parametro ')'  (44)

	error  shift 74
	F32  shift 17
	I32  shift 18
	')'  shift 156
	.  error

	tipo  goto 52
	parametro  goto 125
	error_parametro  goto 56


state 77
	error_declaracion_fun : FUN lista_de_parametros . ':' tipo  (34)

	':'  shift 157
	.  error


state 78
	retorno : RETURN expresion_aritmetica .  (75)
	expresion_aritmetica : expresion_aritmetica . '+' termino  (79)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (80)
	error_expresion_aritmetica : expresion_aritmetica . '+' error  (82)
	error_expresion_aritmetica : expresion_aritmetica . '-' error  (83)

	'+'  shift 136
	'-'  shift 137
	error  reduce 75
	';'  reduce 75


state 79
	error_ejecucion : BREAK error .  (64)

	.  reduce 64


state 80
	ejecucion : BREAK ';' .  (57)

	.  reduce 57


state 81
	invocacion : ID . '(' parametros_reales ')'  (97)
	invocacion : ID . '(' ')'  (98)
	error_invocacion : ID . '(' parametros_reales error  (100)
	error_invocacion : ID . '(' error  (101)

	'('  shift 132
	.  error


state 82
	error_ejecucion : DISCARD ';' .  (67)

	.  reduce 67


state 83
	ejecucion : DISCARD invocacion . ';'  (52)
	error_ejecucion : DISCARD invocacion . error  (68)

	error  shift 158
	';'  shift 159
	.  error


state 84
	control : FOR '(' . asignacion_for ';' condicion_for ';' '+' CTE_INT ')' bloque_if_for  (132)
	control : FOR '(' . asignacion_for ';' condicion_for ';' '-' CTE_INT ')' bloque_if_for  (133)
	error_control : FOR '(' . asignacion_for ';' condicion_for ';' CTE_INT ')' bloque_if_for  (135)
	error_control : FOR '(' . asignacion_for ';' condicion_for ';' '-' ')' bloque_if_for  (136)
	error_control : FOR '(' . asignacion_for ';' condicion_for ';' '+' ')' bloque_if_for  (137)

	ID  shift 160
	ASIGNACION  shift 161
	.  error

	asignacion_for  goto 162
	error_asignacion_for  goto 163


state 85
	error_ejecucion : CONTINUE error .  (66)

	.  reduce 66


state 86
	ejecucion : CONTINUE ';' .  (58)

	.  reduce 58

